fixed z-index collision

--- a/src/styles/components/_dashboard-grid.scss
+++ b/src/styles/components/_dashboard-grid.scss
@@ -95,6 +95,7 @@
   grid-template-columns: 1fr auto;
   border-radius: $border-radius-lg;
   transition: box-shadow $transition;
+  z-index: 1;
   box-shadow: 0 $spacing-lg $spacing-lg 0 var(--background-color),
     0 calc(($spacing-xxl) * -1) 0 0 var(--background-color);
 
@@ -117,7 +118,7 @@
   justify-content: flex-end;
   align-items: stretch;
   border: 1px solid var(--border-color);
-  border-inline-start-color: transparent;
+  border-inline-start-color: var(--card-background);
   border-radius: 0 $border-radius-lg $border-radius-lg 0;
   overflow: hidden;
   transition: border-color $transition;
